--- a/eurekaclient-dev.yml
+++ b/eurekaclient-dev.yml
@@ -1,2 +1,7 @@
 spring:
   cloud: gitbuh connected, v1.1.
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      percentage: 1.0
