--- a/eurekaclient-dev.yml
+++ b/eurekaclient-dev.yml
@@ -1,5 +1,5 @@
 spring:
-  cloud: gitbuh connected, v1.1.
+  # cloud: gitbuh connected, v1.1.
   zipkin:
     base-url: http://localhost:9411
   sleuth:
