--- a/eurekaclient-dev.yml
+++ b/eurekaclient-dev.yml
@@ -1,6 +1,7 @@
 spring:
     zipkin:
         base-url: http://localhost:9411
+        enabled: true
     sleuth:
         sampler:
             percentage: 1.0
