--- a/eurekaclient-dev.yml
+++ b/eurekaclient-dev.yml
@@ -1,7 +1,9 @@
 spring:
-    zipkin:
-        base-url: http://localhost:9411
-        enabled: true
-    sleuth:
-        sampler:
-            percentage: 1.0
+  sleuth:
+    sampler:
+      percentage: 1.0
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
